Update Gradle, cleanup test